# Merkly

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.whisper  LICENSE  Makefile  README.md  TODOS.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0e59df8ab9b9_deleted_dialects.py  125401c24435_listening_model_index_added.py  1d2bbcb219bb_added_listel_history_model.py  2361ec75771d_initial.py  2c133629059c_added_user_id.py  46c78ee8687d_messenger_type.py  619744d0ec7b_drop_session_minutes.py  67719c0c10a4_initial.py  84f0cafe50c0_create_article_and_listening_pools.py  b2c3d4e5f6a7_add_session_history.py  b3c4d5e6f7a8_add_session_id_to_sessions.py  c3f8a1e29d74_add_learning_strategy_to_profiles.py  d4e9b2f31a05_add_question_count_episode_duration_to_profiles.py  ecddc5352de4_identity_table_added.py
backend/: Dockerfile  main.py
backend/src/: config.py  dependencies.py
backend/src/application/: article_refill_service.py  background_refiller.py  listening_refill_service.py  listening_service.py  vocab_refill_service.py
backend/src/application/agent/: core.py  prompts.py  reading_agent.py  tools.py  vocab_agent.py  writing_agent.py
backend/src/application/ports/: session_store.py  storage.py
backend/src/application/use_cases/: __init__.py  resolve_user.py  start_session.py  vocab_use_case.py  writing_use_case.py
backend/src/domain/: constants.py  entities.py  enums.py  session.py  utils.py
backend/src/domain/ports/: article_fetcher.py  article_pool_repo.py  card_gateway.py  identity_repo.py  listening_history_repo.py  listening_pool_repo.py  llm_gateway.py  profile_repo.py  session_history_repo.py  session_repo.py  vocab_pool_repo.py  writing_theme_repo.py
backend/src/infrastructure/: audio.py  constants.py  decorators.py  exceptions.py  logging_config.py  memory_storage.py  middleware.py  redis_storage.py  session_store.py
backend/src/presentation/: converters.py  routes.py
docs/: api-errors.md
docs/migrations/: add_writing_theme_pool.md
frontend/telegram/: Dockerfile  main.py  pyproject.toml
frontend/telegram/src/config/: di.py  settings.py
frontend/telegram/src/infrastructure/backend_client/: __init__.py  client.py  types.py
frontend/telegram/src/presentation/: messages.py
frontend/telegram/src/presentation/handlers/: __init__.py  commands.py  common.py  listening.py  session.py  settings.py  vocab.py  word_capture.py  writing.py
src/: config.py  container.py  dependencies.py  main.py
src/application/: article_refill_service.py  listening_refill_service.py  listening_service.py  vocab_refill_service.py
src/application/agent/: core.py  prompts.py  tools.py
src/domain/: constants.py  entities.py  enums.py  exceptions.py  utils.py
src/domain/ports/: article_fetcher.py  article_pool_repo.py  card_gateway.py  identity_repo.py  listening_pool_repo.py  podcast_fetcher.py  profile_repo.py  session_history_repo.py  session_repo.py  vocab_pool_repo.py
src/infrastructure/: audio.py  decorators.py  exceptions.py  logging_config.py
src/infrastructure/card_backends/: anki.py  mochi.py
src/infrastructure/fetchers/: rss.py
src/infrastructure/integrations/: anki_client.py  dw_fetcher.py  mochi_client.py
src/infrastructure/llm/: client.py
src/infrastructure/repositories/: json_profile_repo.py  json_session_repo.py
src/infrastructure/scheduler/: reminders.py
src/infrastructure/telegram/: bot_state.py  commands.py  messages.py  states.py
src/infrastructure/whisper/: client.py
tests/: conftest.py  test_audio_service.py  test_dw_fetcher.py  test_listening_agent.py  test_parse_duration.py  test_parse_questions.py  test_podcast_router.py
tests/integration/: test_profile_repo.py  test_session_repo.py  test_vocab_pool_repo.py
tests/unit/: test_reminder_scheduler.py  test_vocab_refill_service.py
(+93 files in other folders)
