[project]
name = "lang-tutor-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13",
    "aiogram-dialog>=2.3",
    "dishka>=1.3",
    "msgspec>=0.18",
    "apscheduler>=3.10",
    "openai>=1.50",
    "httpx>=0.27",
    "pydantic-settings>=2.5",
]

[project.scripts]
bot = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ty]
python-version = "3.12"

[tool.uv]
dev-dependencies = ["ruff>=0.6", "ty>=0.0.1a6", "pre-commit>=3.8"]
