[project]
name = "lang-tutor-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13",
    "aiogram-dialog>=2.3",
    "dishka>=1.3",
    "msgspec>=0.18",
    "apscheduler>=3.10",
    "openai>=1.50",
    "httpx>=0.27",
    "pydantic-settings>=2.5",
    "pre-commit>=4.5.1",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "feedparser>=6.0",
    "structlog>=24.0.0",
    "greenlet>=3.3.2",
    "litestar>=2.21.1",
]

[project.scripts]
bot = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"src/application/agent/prompts.py" = ["E501"]

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = ["integration: requires a real Postgres database (TEST_DATABASE_URL)"]
env = ["TEST_DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5433/merkly_test"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "ty>=0.0.1a6",
    "pre-commit>=3.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-env>=1.1",
    "respx>=0.21",
]
