[project]
name = "lang-tutor-frontend-telegram"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13",
    "aiogram-dialog>=2.3",
    "dishka>=1.3",
    "httpx>=0.27",
    "structlog>=24.0.0",
    "pydantic-settings>=2.5",
    "msgspec>=0.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
